--- a/dockerfiles/nova/Dockerfile
+++ b/dockerfiles/nova/Dockerfile
@@ -11,14 +11,15 @@ RUN apt-get install -y \
     nova-scheduler \
     python-novaclient
 
-
-ADD run.sh run.sh
 ADD setup.sh setup.sh
+ADD run.sh run.sh
+ADD wait_for_ks_admin_ep.sh wait_for_ks_admin_ep.sh
+ADD wait_for_mysql.sh wait_for_mysql.sh
 
-RUN chmod +x run.sh && chmod +x setup.sh
+RUN chmod +x wait_for_ks_admin_ep.sh && chmod +x wait_for_mysql.sh && chmod +x run.sh && chmod +x setup.sh
 
 EXPOSE 8774
 EXPOSE 8775
 EXPOSE 6080
 
-CMD ./setup.sh && sleep 5 && ./run.sh
+CMD ./wait_for_mysql.sh && ./setup.sh && sleep 5 && ./run.sh
