--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -159,6 +159,19 @@ openstack-clients:
     - "22222:22"
   env_file:
     - ./env.list
+  extra_hosts:
+    - "rabbit-host:10.199.1.220"
+    - "keystone-host:10.199.1.220"
+    - "horizon-host:10.199.1.220"
+    - "cinder-host:10.199.1.220"
+    - "glance-host:10.199.1.220"
+    - "nova-host:10.199.1.220"
+    - "neutron-host:10.199.1.220"
+    - "heat-host:10.199.1.220"
+    - "mongo-host:10.199.1.220"
+    - "ceil-host:10.199.1.220"
+    - "mysql-host:10.199.1.220"
+
 
 openstack-horizon:
   build: dockerfiles/horizon
