--- a/dockerfiles/mongodb/Dockerfile
+++ b/dockerfiles/mongodb/Dockerfile
@@ -12,10 +12,12 @@ ADD run.sh run.sh
 ADD wait_for_ks_admin_ep.sh wait_for_ks_admin_ep.sh
 ADD wait_for_mysql.sh wait_for_mysql.sh
 ADD wait_for_rabbitmq.sh wait_for_rabbitmq.sh
+ADD wait_for_mongo.sh wait_for_mongo.sh
 
 RUN chmod +x wait_for_ks_admin_ep.sh && \
     chmod +x wait_for_mysql.sh && \
     chmod +x wait_for_rabbitmq.sh && \
+    chmod +x wait_for_mongo.sh && \
     chmod +x run.sh && \
     chmod +x setup.sh
 
