--- a/dockerfiles/ceilometer/Dockerfile
+++ b/dockerfiles/ceilometer/Dockerfile
@@ -20,11 +20,17 @@ ADD wait_for_ks_admin_ep.sh wait_for_ks_admin_ep.sh
 ADD wait_for_mysql.sh wait_for_mysql.sh
 ADD wait_for_rabbitmq.sh wait_for_rabbitmq.sh
 ADD wait_for_mongo.sh wait_for_mongo.sh
+ADD wait_for_glance_api.sh wait_for_glance_api.sh
+ADD wait_for_neutron_api.sh wait_for_neutron_api.sh
+ADD wait_for_nova_api.sh wait_for_nova_api.sh
 
 RUN chmod +x wait_for_ks_admin_ep.sh && \
    chmod +x wait_for_mysql.sh && \
    chmod +x wait_for_rabbitmq.sh && \
    chmod +x wait_for_mongo.sh && \
+   chmod +x wait_for_glance_api.sh && \
+   chmod +x wait_for_neutron_api.sh && \
+   chmod +x wait_for_nova_api.sh && \
    chmod +x run.sh && \
    chmod +x setup.sh
 
