enhance heat test

--- a/launch-1st-instances/heat_hot_based/test-stack.yml
+++ b/launch-1st-instances/heat_hot_based/test-stack.yml
@@ -46,7 +46,7 @@ resources:
       #ipv6_address_mode: String
       #ipv6_ra_mode: String
       name: demo_hot_subnet_private
-      network: { get_resource: private_network }
+      network: { get_resource: demo_hot_net_private }
       #prefixlen: Integer
       #subnetpool: String
       #tenant_id: String
