enhance heat test

--- a/launch-1st-instances/heat_hot_based/public_net.yaml
+++ b/launch-1st-instances/heat_hot_based/public_net.yaml
@@ -16,7 +16,7 @@ resources:
 #      shared: True
 
   network:
-    type": OS::Neutron::Net
+    type: OS::Neutron::Net
     properties:
       #admin_state_up: Boolean
       name: public
